--- a/site.yml
+++ b/site.yml
@@ -8,7 +8,7 @@
       tags: java
     - name: Upload .tar.gz file containing binaries from local storage
       copy:
-        src: "{{ java_oracle_jdk_package }}"
+        src: "files/{{ java_oracle_jdk_package }}"
         dest: "/tmp/jdk-{{ java_jdk_version }}.tar.gz"
       register: download_java_binaries
       until: download_java_binaries is succeeded
@@ -36,7 +36,7 @@
         dest: /etc/profile.d/jdk.sh
       tags: java
 - name: Install Elasticsearch
-  hosts: elasticsearch
+  hosts: elas
   tasks:
     - name: Upload tar.gz Elasticsearch from remote URL
       get_url:
@@ -70,3 +70,38 @@
         src: templates/elk.sh.j2
         dest: /etc/profile.d/elk.sh
       tags: elastic
+- name: Install Kibana
+  hosts: kiba
+  tasks:
+    - name: Upload tar.gz Kibana from remote URL
+      get_url:
+        url: "https://artifacts.elastic.co/downloads/kibana/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+        dest: "/tmp/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+        mode: 0755
+        timeout: 60
+        force: true
+        validate_certs: false
+      register: get_kibana
+      until: get_kibana is succeeded
+      tags: kibana
+    - name: Create directrory for Kibana
+      file:
+        state: directory
+        path: "{{ kibana_home }}"
+      tags: kibana
+    - name: Extract Kibana in the installation directory
+      become: true
+      unarchive:
+        copy: false
+        src: "/tmp/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+        dest: "{{ kibana_home }}"
+        extra_opts: [--strip-components=1]
+        creates: "{{ kibana_home }}/bin/kibana"
+      tags:
+        - kibana
+    - name: Set environment Kibana
+      become: true
+      template:
+        src: templates/kib.sh.j2
+        dest: /etc/profile.d/kib.sh
+      tags: kibana
